web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-func-var-sloppy/output.txt
[SyntaxError]: Identifier has already been declared. (3,7)
3|  var foo = 1;
 |     ^
